feat: Support 8 directional Grids
Co-authored-by: Jean-René Lavoie <>